# etl-pipeline-framework

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: sample_pipeline.yaml
dags/: dag_generator.py
docs/: architecture.md
etl/: pipeline.py  validation.py
etl/extractors/: base.py  csv_extractor.py  postgres.py  rest_api.py
etl/loaders/: base.py  csv_loader.py  parquet_loader.py
etl/transformers/: base.py  cast_types.py  dedup.py  filter_rows.py  rename.py
tests/: test_pipeline.py  test_transforms.py
